package todolist.common;

/**
 * used in Packet with the server
 */
public enum Command {
    ADD, REMOVE, EDIT, INIT, CLOSE
}
