package todolist.common;

/**
 * Represents the task importance
 */
public enum Importance {
    HIGH, MEDIUM, LOW
}
